<resources>
    <!--App Details-->
    <string name="app_name">LifeGo</string>

    <!--Fragments-->
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>

    <!--AppBar Headings-->

    <!--String Arrays-->
    <string-array name="progress_statebar_array">
        <item>Summary</item>
        <item>Payment</item>
        <item>Success</item>
    </string-array>

    <string-array name="country_code_array">
        <item>+254</item>
        <item>+255</item>
        <item>+256</item>
    </string-array>

    <string-array name="region_array">
        <item>Central</item>
        <item>West</item>
        <item>East</item>
        <item>North</item>
    </string-array>

    <string-array name="central_region_array">
        <item>Kampala</item>
        <item>Ntinda</item>
        <item>Gayaza</item>
        <item>Kawempe</item>
    </string-array>

    <!--Hints-->
    <string name="search_hint">Search products and stores</string>

    <!--Blank Screens-->
    <string name="orders_blank">No orders yet</string>

    <!--Buttons-->
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="logout">Logout</string>

    <!--General-->
    <string name="welcome">Welcome to LifeGo!</string>
    <string name="info">Description</string>
    <string name="lorem">Azithromycin is an antiobiotic used in the treatment of infections such as rain, showers and thunder.Azithromycin is an antiobiotic used in the treatment of infections such as rain, showers and thunder, the antiobiotic used in the treatment of infections such as rain, showers and thunder.</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="mtnmomo">MTN MoMo</string>
    <string name="airtel_money">Airtel Money</string>
    <string name="paypal">PayPal</string>
    <string name="fee_total">Delivery Fee</string>
    <string name="save">Save</string>
    <string name="change_photo">Change Photo</string>
    <string name="summary">Summary</string>
    <string name="pricing">Pricing</string>
    <string name="cart_total">Cart Total</string>
    <string name="tax_total">Tax</string>
    <string name="or">OR</string>
    <string name="skip">Skip this step</string>
    <string name="subtotal">Sub Total</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password (must be longer than 8 characters)</string>
    <string name="register">Register to get started</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="contact1">Phone Number</string>

    <!--Samples-->
    <string name="product_sample_name">Azithromycin 400</string>
    <string name="product_name_desc">Product name</string>
    <string name="product_sample_manufacturer">Medipharm Labs</string>
    <string name="product_sample_price">22,000/=</string>
    <string name="total">Cart Total: 44,000/=</string>
    <string name="subtotal_price">92,780/=</string>
    <string name="num">5</string>
    <string name="product_sample_tax">2780/=</string>
    <string name="cart_total_price">44,000/=</string>
    <string name="phone_number">e.g 701123456</string>
    <string name="sample_product">Lorem Drug 500mg</string>
    <string name="sample_username">John Doe</string>
    <string name="sample_address">Plot 18 Musa Rd, Kampala</string>
    <string name="product_sample_fee">6000/=</string>

    <!--Model Binding Strings-->
    <string name="order_confirm">Your order has been placed!</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="reg_email">Register with email address</string>
    <string name="reg_phone">Register with phone number</string>
    <string name="groceries">Groceries</string>
    <string name="category_details">Food, Utilities and More</string>
    <string name="order_id">Order ID : 123DFT</string>
    <string name="order_date">Ordered on : 12/06/2019</string>
    <string name="vendor">Vendor</string>
    <string name="make_payment">Make payment</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="history">History</string>
    <string name="settings">Account Settings</string>
    <string name="given_name">Given Name</string>
    <string name="surname">Surname</string>
    <string name="email_address">Email Address</string>
    <string name="sample_vendor">AB Clinic Bukoto</string>
    <string name="order_date2">Ordered on : 14/07/2019</string>
    <string name="order_id2">Order ID : 763BTX</string>
    <string name="shopping_cart">Cart</string>
    <string name="item_added">This item has been added to your cart</string>
    <string name="sample_email_address">johndoe@gmail.com</string>
    <string name="rating_review">Ratings and Reviews</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="receiver_name">Receiver name</string>
    <string name="region">Region</string>
    <string name="area">Area</string>
    <string name="delivery_instructions">Delivery Instructions</string>
    <string name="save_address">Save Address</string>
    <string name="enter_location">Delivery Location</string>
    <string name="sle">Select Your Region</string>
    <string name="payment_options">Select your payment option</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="sample_store_location">Some Rd, Bugolobi</string>
    <string name="sample_rating">(4.2)</string>
    <string name="sort_filter">Filter Search Results</string>
    <string name="summary_goods">Summary of Goods</string>
    <string name="select_delivery_address">Select your delivery address</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="payment">Payment</string>
    <string name="payment_made">Payment Made</string>
    <string name="order_details">Your order number is EXT536</string>
    <string name="upload">Upload Prescription</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="personal_details">Your Personal Details</string>
    <string name="proceed">Proceed</string>
    <string name="opt_in">Opt In</string>
    <string name="next_of_kin_name">Next of Kin Name</string>
    <string name="next_of_kin_r_type">Next of Kin Relationship Type</string>
    <string name="phone_contact">Phone Contact</string>
    <string name="next_of_kin_phone_contact">Next of Kin Phone Contact</string>
    <string name="nok_details">Your Next of Kin Details</string>
    <string name="register_title">Register</string>
    <string name="dob">Date of Birth</string>
    <string name="select">Select</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ddmmyy">dd/mm/yy</string>

</resources>