<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="5dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:src="@drawable/man"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            style="@style/MutedText"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_margin="8dp"
            android:inputType="textPersonName"
            android:textColor="@color/fontColor"
            android:enabled="false"
            android:text="@string/given_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_margin="8dp"
            android:inputType="textPersonName"
            android:textColor="@color/fontColor"
            android:enabled="false"
            android:text="@string/surname"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_margin="8dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/fontColor"
            android:enabled="false"
            android:text="@string/email_address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_margin="8dp"
            android:inputType="phone"
            android:textColor="@color/fontColor"
            android:enabled="false"
            android:text="@string/contact1"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/gender"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/save"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            app:elevation="4dp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="0dp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.659"/>

    </LinearLayout>

</ScrollView>