<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="320sp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/product_name_desc"
        android:maxHeight="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/med1"
        android:foreground="@drawable/image_gradient"
        app:layout_collapseMode="parallax"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/product_sample_name"
            />

        <TextView
            android:id="@+id/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/product_sample_price"
            />

        <TextView
            android:id="@+id/vendor_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/vendor"
            android:textAppearance="@style/AllCapsTitle"
            />

        <TextView
            android:id="@+id/vendor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vendor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/product_sample_manufacturer"
            />

        <TextView
            android:id="@+id/product_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textAppearance="@style/AllCapsTitle"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vendor"/>

        <TextView
            android:id="@+id/product_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/lorem"
            android:lineSpacingExtra="5sp"
            />

        <TextView
            android:id="@+id/product_ratings_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_info"
            android:textAppearance="@style/AllCapsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/rating_review"
            android:lineSpacingExtra="5sp"
            />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/product_rating"
            style="?android:attr/ratingBarStyleIndicator"
            app:layout_constraintTop_toBottomOf="@id/product_ratings_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:rating="4.2"
            android:stepSize="0.2"
            android:theme="@style/RatingBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:text="@string/add_to_cart"
        app:cornerRadius="0dp"/>

</LinearLayout>