<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/state_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spb_currentStateNumber="two"
            app:spb_maxStateNumber="three"
            app:spb_currentStateDescriptionColor="@color/fontColor"
            app:spb_stateBackgroundColor="@color/blueGrey"
            app:spb_stateForegroundColor="@color/colorAccent"
            app:spb_stateNumberBackgroundColor="@color/lightGrey"
            app:spb_stateNumberForegroundColor="@color/lightGrey"
            app:spb_animateToCurrentProgressState="true"
            app:spb_checkStateCompleted="true"/>
        
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/payment_buttons"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@id/state_progress_bar"
            app:layout_constraintStart_toStartOf="parent">
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mtn_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mtnmomo"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/airtel_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/airtel_money"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/paypal_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/paypal"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            
            
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/pricing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/pricing"
            android:textAppearance="@style/AllCapsTitle"
            app:layout_constraintBottom_toTopOf="@id/price_row"
            app:layout_constraintTop_toBottomOf="@id/payment_buttons"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/price_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/pricing">

            <TextView
                android:id="@+id/cart_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/cart_total"
                android:textAppearance="@style/MutedText" />

            <TextView
                android:id="@+id/cart_total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/cart_total_price"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tax_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/price_row">

            <TextView
                android:id="@+id/tax_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/tax_total"
                android:textAppearance="@style/MutedText" />

            <TextView
                android:id="@+id/tax_total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/product_sample_tax"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fee_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:layout_marginTop="20dp"
            
            
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/tax_row">

            <TextView
                android:id="@+id/fee_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/fee_total"
                android:textAppearance="@style/MutedText" />

            <TextView
                android:id="@+id/fee_total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/product_sample_fee"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fee_row" />

        <LinearLayout
            android:id="@+id/total_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card2" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/subtotal_price"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/make_payment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="20dp"
        android:text="@string/make_payment" />

</LinearLayout>