<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/state_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spb_currentStateDescriptionColor="@color/fontColor"
            app:spb_checkStateCompleted="true"
            app:spb_currentStateNumber="three"
            app:spb_maxStateNumber="three"
            app:spb_descriptionTopSpaceIncrementer="5dp"
            app:spb_stateDescriptionSize="14sp"
            app:spb_stateLineThickness="2dp"
            app:spb_stateSize="20dp"
            app:spb_stateTextSize="14sp"
            app:spb_stateBackgroundColor="@color/blueGrey"
            app:spb_stateForegroundColor="@color/colorAccent"
            app:spb_stateNumberBackgroundColor="@color/lightGrey"
            app:spb_stateNumberForegroundColor="@color/lightGrey" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/summary"
            android:textAppearance="@style/AllCapsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lin"
            app:layout_constraintTop_toBottomOf="@id/state_progress_bar" />

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/summary"
            app:layout_constraintBottom_toTopOf="@id/address_title">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/product_name_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/med2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/product_sample_name"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/product_vendor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/sample_vendor"
                    android:textAppearance="@style/MutedText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:textAppearance="@style/AllCapsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/address"
            app:layout_constraintTop_toBottomOf="@id/lin"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/payment_title"
            app:layout_constraintTop_toBottomOf="@id/address_title"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_made"
            android:textAppearance="@style/AllCapsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/payment"
            app:layout_constraintTop_toBottomOf="@id/address"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/order_confirm_button"
            app:layout_constraintTop_toBottomOf="@id/payment_title"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/order_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/confirm_order"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/payment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>